@@ -22,6 +22,11 @@ CVS code -
 	  load_file(), rename cancel_fork() cancel_command(),
 	  rename open_pipe() execute_command(), and remove
 	  execute_command(). (DLR)
+	- Replace almost all mvwaddstr(hblank) calls with mvwhline(' ',
+	  COLS) calls, which do the same thing.  Changes to
+	  do_browser(), blank_titlebar(), blank_topbar(), blank_edit(),
+	  blank_statusbar(), blank_bottombars(), update_line(), and
+	  edit_refresh(). (DLR)
 - files.c:
   open_file()
 	- Assert that filename isn't NULL, and don't do anything special
